# BEER

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  USER_MANUAL.md  beer.py  manuscript.tex  prism.py  probe.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  test.yml
beer/: __init__.py  __main__.py  config.py  constants.py
beer/analysis/: __init__.py  aggregation.py  alphafold_data.py  amphipathic.py  composite_structure.py  core.py  msa_covariance.py  msa_pssm.py  phosphorylation.py  pocket_proxy.py  proteolysis.py  ptm.py  rnabinding.py  scd.py  signal_peptide.py  tandem_repeats.py  tango.py  tmhmm_local.py  variant_scoring.py
beer/embeddings/: __init__.py  base.py  esm2_embedder.py  esmc_embedder.py  fallback_embedder.py
beer/graphs/: __init__.py  _style.py  charge.py  comparative.py  composition.py  new_graphs.py  overlay.py  profiles.py  sequence_maps.py  structural.py  structure.py  variant_map.py
beer/graphs/data/: ramachandran_top8000.npz
beer/gui/: 3Dmol-min.js.LICENSE.txt  __init__.py  app.py  dialogs.py  main_window.py  nav_widget.py  struct_viewer.html  themes.py  workers.py
beer/io/: __init__.py  export.py  format_helpers.py  graph_data_export.py  pdb.py  provenance.py  session.py  structure_formats.py  track_export.py
beer/models/: __init__.py  aggregation_head.npz  disorder_head.npz  ptm_head.npz  signal_head.npz  weights_manifest.json
beer/network/: __init__.py  _http.py  alphafold.py  blast.py  disprot.py  elm.py  pfam.py  phasepdb.py  workers.py
beer/reports/: css.py  sections.py
beer/tests/: test_analysis.py
beer/utils/: __init__.py  biophysics.py  pdb.py  sequence.py  structure.py
docs/: beer3_training_summary.tex  index.html
results/: auc_summary.csv  benchmark_report.txt
scripts/: benchmark.py  case_studies.py  dataset_audit.py  fetch_curated_data.py  plot_validation.py  proteome_analysis.py  train_aggregation_head.py  train_all_heads.py  train_heads.py  train_tm_head.py
tests/: conftest.py  test_aggregation.py  test_analysis.py  test_analysis_core.py  test_beer.py  test_biophysics.py  test_composite.py  test_constants.py  test_embeddings.py  test_http.py  test_msa_pssm.py  test_pdb.py  test_provenance.py  test_ptm.py  test_ramachandran.py  test_reports.py  test_rnabinding.py  test_scd.py  test_signal_peptide.py  test_structure_utils.py  test_tandem_repeats.py  test_track_export.py  test_weights_loader.py
